# game

./: .gitignore  CMakeLists.txt
builds/linux/: Makefile.in  Makefile.sudoku
builds/vs2013/game/: game.props  game.sln
builds/vs2013/game/Card/: Card.vcxproj  Card.vcxproj.filters
builds/vs2013/game/guess/: guess.rc  guess.vcxproj  guess.vcxproj.filters  resource.h
builds/vs2013/game/sudoku/: Resource.rc  sudoku.vcxproj  sudoku.vcxproj.filters
src/: CMakeLists.txt
src/card/: Card.cpp  Card.h  Combination.cpp  Combination.h  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
src/guess/: CMakeLists.txt  GuessFrame.h  IGuessFrame.cpp  IGuessFrame.fbp  IGuessFrame.h  MyFrame.cpp  MyFrame.h  main.cpp
src/sudoku/: CMakeLists.txt  Generator.cpp  Generator.h  ISudoku.cpp  ISudoku.h  ISudokuFrame.cpp  ISudokuFrame.h  SodukuFrame.fbp  Solver.cpp  Solver.h  SudokuFrame.h  SukokuFrame.h  def.h  game_test.txt  game_top10.txt  hard.txt  main.cpp  simlog.ini  sudoku.cpp  sudoku.h  sudoku.ini  worker.cpp  worker.h
src/txt/: CMakeLists.txt  ITCFrame.cpp  ITCFrame.h  ITxtConverter.fbp  TC.rc  TCMainFrame.cpp  TCMainFrame.h  TxtConverter.ini  main.cpp
src/txt/en/: TxtConverter.mo  TxtConverter.po
src/txt/pot/: TxtConverter.pot
src/txt/zh_CN/: TxtConverter.mo  TxtConverter.po
